# esp32_projects

./: .gitignore  README.md  run_container.sh
blink/: sdkconfig
docker/: compose.yaml
projects/blink/: sdkconfig
projects/blink/main/: blink_example_main.c
projects/color_led/: CMakeLists.txt  sdkconfig
projects/color_led/main/: CMakeLists.txt  main.c
projects/hal/color_led/: Cargo.toml  README.md
projects/hal/color_led/src/: hsv.rs  lib.rs
projects/rust/color_led/: Cargo.toml  sdkconfig.defaults
projects/rust/color_led/.cargo/: config.toml
projects/rust/color_led/src/: hsv.rs  led_pwm.rs  main.rs
scripts/: about.sh  run_container.sh  stop_container.sh
